--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,7 @@
     <title>Plumii</title>
     <meta property="title" content="Charadex" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://www.Plumii.com/" />
     <meta property="image" content="assets/meta.png" />
     <meta name="description" content="A tool for organizing small ARPGs and species.">
 
