--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Plumii</title>
+    <title>Kazuli</title>
     <meta property="title" content="Charadex" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.Plumii.com/" />
+    <meta property="url" content="https://www.Kazuli.com/" />
     <meta property="image" content="assets/meta.png" />
     <meta name="description" content="A tool for organizing small ARPGs and species.">
 
