--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/emojis/1153799522938519642.webp?size=56&quality=lossless" />
     <title>Kazuli</title>
     <meta property="title" content="Charadex" />
     <meta property="type" content="website" />
