--- a/index.html
+++ b/index.html
@@ -77,15 +77,16 @@
 
                     <!-- Hero Image & Title
                     ------------------------------------------------------------- -->
-                    <div class="hero-title mb-4" style="background-image: url();">
-                        <div class="m-auto">Charadex</div>
+                    <div class="hero-title mb-4" style="background-image: url(https://i.pinimg.com/564x/78/56/d1/7856d1e8255311ba28c466dbc8b81567.jpg);">
+                        <div class="m-auto">Kazuli Land</div>
                     </div>
 
 
                     <!-- Description
                     ------------------------------------------------------------- -->
                     <div class="px-4 text-muted">
-                        <p>Write about your species...</p>
+                        <p>Kazuli are creatures that choose a base (plant, animal, or object) and use it to form their bodies. Their subspecies correspond to the absorbed base, and depending on the subspecies, they have certain traits. Kazuli are found in different territories, on the ground, under it, in the air, and even underwater.</p> 
+                        <p>Kazuli are bipedal creatures, and predominantly walk on two legs. This means they are not wild. They also have their own language, settlements, society, traditions, and holidays.</p>
                     </div>
 
 
