--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <!-- Hero Image & Title
                     ------------------------------------------------------------- -->
-                    <div class="hero-title mb-4" style="background-image: url(https://i.pinimg.com/564x/78/56/d1/7856d1e8255311ba28c466dbc8b81567.jpg);">
+                    <div class="hero-title mb-4" style="background-image: url(https://f2.toyhou.se/file/f2-toyhou-se/images/70883954_lz1HNKRGRYcNWco.png?1694814591);">
                         <div class="m-auto">Kazuli Land</div>
                     </div>
 
