--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <div class="col-lg-4 col-md-6 p-1">
                             <h5>Community</h5>
                             <div class="px-3">
-                                <a class="btn btn-primary d-block mb-1" href="#">Toyhou.se</a>
-                                <a class="btn btn-primary d-block mb-1" href="#">Discord</a>
+                                <a class="btn btn-primary d-block mb-1" href="https://toyhou.se/~world/157046.kazuli">Toyhou.se</a>
+                                <a class="btn btn-primary d-block mb-1" href="https://discord.gg/QchPqauG3M">Discord</a>
                                 <a class="btn btn-primary d-block mb-1" href="prompts.html">Prompts</a>
                             </div>
                         </div>
