--- a/species.html
+++ b/species.html
@@ -69,9 +69,7 @@
         <-------------------------------------------------------------------- -->
         <div class="card p-md-5 p-4">
             <h1 class="text-primary mb-3">About Species</h1>
-            <div class="pl-4">
-                test
-            </div>
+            <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/80626560_gIWGgwxX85BqMwz.png" class="fr-fic fr-dib" width="1358.98" height="764.418"></p>
         </div>
 
     </div>
