--- a/species.html
+++ b/species.html
@@ -68,9 +68,26 @@
         <!-- General Info
         <-------------------------------------------------------------------- -->
         <div class="card p-md-5 p-4">
-            <h1 class="text-primary mb-3">About Species</h1>
-            <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/80626560_gIWGgwxX85BqMwz.png" class="img-fluid" width="1358.98" height="764.418">
-        </div>
+    <h1 class="text-primary mb-3">About Species</h1>
+</div><br>
+<div class="card p-md-5 p-4">
+    <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/80626560_gIWGgwxX85BqMwz.png" class="img-fluid" width="1358.98" height="764.418"><br>
+    <p style="text-align: left;">Kazuli are creatures that choose a base (plant, animal, or object) and use it to form their bodies. Their subspecies correspond to the absorbed base, and depending on the subspecies, they have certain traits.&nbsp;</p>
+
+	<p style="text-align: left;">A Kazuli&#39;s body consists of slime, spores, and a pinch of magic. Kazuli have an anthropomorphic appearance and resemble animals, but still move on two legs (hind legs), and have arms (forelegs) with which they can pick up objects and use tools. The outside of their body is covered with skin that feels like a mushroom stalk. The skin can be covered with silky moss and grass that resembles hair and fur thanks to a pinch of magic. &nbsp;Inside their body is a skeleton of roots, compacted mucus, or bones that supports the body and makes it capable of grasping, jumping, running, and other activities! Inside the body of Kazuli except for the skeleton and absorbed object there is slime, which dissolves all the food, get into the body of Kazuli.</p>
+
+	<p style="text-align: left;">Shape of the body (more or less plump), the volume of hips, torso, muscles and other things depends on the desire of the Kazulii itself. The only limitations are that Kazuli has no nipples and genitalia.</p>
+
+	<p style="text-align: left;">Kazuli&#39;s head can be one of the variations given. Of course, depending on your artstyle, the head can be different, but the main thing is that the deviations are not too big and the shape remains recognizable.</p>
+
+	<p style="text-align: left;">Kazuli have a small round nose on their face, which they use to touch other Kazuli or objects. By rubbing their noses on each other, Kazuli get to know each other and pass on information about themselves. These actions are mostly associated with friendly, familial, or romantic relationships.</p>
+
+	<p style="text-align: left;">They also have a mouth on their face with a tongue inside, which is similar to a frog&#39;s tongue. Inside the mouth, the tongue is compressed like a spring, and when a Kazuli wants to grab something, it opens its mouth and shoots out its tongue, grabbing the object. The object sticks to the tongue and then the tongue returns to the mouth with the object. Once inside the Kazuli&#39;s body, the object moves in the slime and eventually dissolves, saturating the Kazuli.</p>
+
+	<p style="text-align: left;">The kazuli skin can be any color and have any pattern as long as the pattern does not mimic other traits. The coloring can include gradient, text, numbers, abstract designs, and so on.<br>If you want your Kazuli to be canonical, it would be better not to use text and numbers in the pattern, as well as parts of human culture, since kazuli are not familiar with it and do not exist in the world together with humans.</p>
+
+	<p style="text-align: left;">The number of fingers on a kazuli hand varies from four to five.</p>
+</div><br>
 
     </div>
 
