--- a/species.html
+++ b/species.html
@@ -68,7 +68,7 @@
         <!-- General Info
         <-------------------------------------------------------------------- -->
         <div class="card p-md-5 p-4">
-    <div class="text-center"><h1 class="text-primary mb-3">Species Anatomy</h1></div>
+    <div class="text-center"><h1 class="text-primary mb-3">Species Anatomy</h1></div><hr>
     <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/80626560_gIWGgwxX85BqMwz.png" class="img-fluid"><br>
     <p style="text-align: left;">Kazuli are creatures that choose a base (plant, animal, or object) and use it to form their bodies. Their subspecies correspond to the absorbed base, and depending on the subspecies, they have certain traits.&nbsp;</p>
 
