--- a/masterlist.html
+++ b/masterlist.html
@@ -253,7 +253,7 @@
 
                             <!-- Item -->
                             <div class="d-flex justify-content-between mb-2">
-                                <b class="text-muted">Status</b>
+                                <b class="text-muted">TH profile</b>
                                 <span class="status"></span>
                             </div>
 
