--- a/masterlist.html
+++ b/masterlist.html
@@ -291,8 +291,9 @@
 
 
                     
-                         <h4>My characters</h4>
-                           <span class="ownedcharacters row no-gutters mx-auto"></span>
+                         <h4><a class="cardlink design"></a>'s Family</h4>
+                            <span class="parents row no-gutters mx-auto"></span>
+                            <span class="siblings row no-gutters mx-auto"></span>
 
 
                     
