--- a/masterlist.html
+++ b/masterlist.html
@@ -271,20 +271,6 @@
 
                             <hr>
 
-                            <!-- Item -->
-                            <div class="">
-                                <b class="text-muted">Transaction Log</b>
-                                <div class="pl-3 pt-2 small" id="log-table">
-                                    <div class="d-none">
-                                        <div class="row no-gutters" id="log-entry">
-                                            <div class="col-md-3"><span class="timestamp"></span></div>
-                                            <div class="col-md-9"><span class="reason"></span></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Add more list items above this line-->
                         </div>
                     </div></br>
 
@@ -292,7 +278,7 @@
 
                     
             <!-- Header -->
-                <h2 class="card-header text-center p-4"><a class="cardlink design">' family</a></h2>
+                <h2 class="card-header text-center p-4">Family</a></h2>
                             <span class="parents row no-gutters mx-auto"></span>
                             <span class="siblings row no-gutters mx-auto"></span>
 
