--- a/masterlist.html
+++ b/masterlist.html
@@ -272,7 +272,7 @@
                             <hr>
 
                         </div>
-                    </div></br>
+                    </div>
 
 
 
