--- a/masterlist.html
+++ b/masterlist.html
@@ -279,7 +279,7 @@
                     
             <!-- Header -->
                 <div class="text-center">
-				<h3>Family<h3>        
+				<h3>Family</h3>        
                         <p>Parents</p>
                         <span class="parents row no-gutters mx-auto"></span>
                         <p>Siblings</p>
