--- a/masterlist.html
+++ b/masterlist.html
@@ -283,9 +283,8 @@
 		    
 	<div class="mx-1 mb-2" id="family">
 		<div class="text-center">
-      		<a data-toggle="collapse" data-target="#info"><b>Family</b></a></div>
+      		<a data-toggle="collapse" data-target="#info" class="collapsed" aria-expanded="false"><b>Family</b></a></div>
       			<div id="info" class="collapse show" data-parent="#family">
-              
             		<b>Parents</b>
                         <span class="parents row no-gutters mx-auto"></span>
                         <b>Siblings</b>
