--- a/masterlist.html
+++ b/masterlist.html
@@ -284,7 +284,7 @@
 	<div class="mx-1 mb-2" id="family">
 		<div class="text-center">
       		<a class="collapsed" data-target="#info" data-toggle="collapse"><b>Family</b></a></div>
-      			<div id="info" class="collapse show" data-parent="#family">
+      			<div id="info" class="collapse" data-parent="#family">
             		<b>Parents</b>
                         <span class="parents row no-gutters mx-auto"></span>
                         <b>Siblings</b>
